# CTP_Simulation

./: .gitignore  CMakeLists.txt  README.md  run_mdapi_test.sh  run_zmq_receiver.sh  setup.sh  setup_clean_api.sh  test_market_data.sh
src/: main.cpp  test_mdapi.cpp  test_zmq_receiver.cpp
src/mdapi/: MdSpi.cpp  MdSpi.h
src/strategy/: StrategyEngine.cpp  StrategyEngine.h
src/traderapi/: TraderSpi.cpp  TraderSpi.h
